--- a/android/Finder/app/src/main/res/layout/activity_main.xml
+++ b/android/Finder/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     <Button
         android:id="@+id/worker_activity_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="go to worker"/>
 
 
 </RelativeLayout>
