--- a/android/Finder/app/src/main/res/layout/activity_main.xml
+++ b/android/Finder/app/src/main/res/layout/activity_main.xml
@@ -11,5 +11,13 @@
         android:layout_height="wrap_content"
         android:text="go to worker"/>
 
+    <Button
+        android:id="@+id/people_activity_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/worker_activity_button"
+        android:text="go to people"/>
+
 
 </RelativeLayout>
