--- a/android/Finder/app/src/main/res/layout/activity_login.xml
+++ b/android/Finder/app/src/main/res/layout/activity_login.xml
@@ -12,4 +12,10 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp" />
+
+    <Button
+        android:id="@+id/login_with_facebook_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="login with facebook"/>
 </RelativeLayout>
