worked on layouts

--- a/android/Finder/app/src/main/res/layout/activity_login.xml
+++ b/android/Finder/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,8 @@
         android:id="@+id/facebook_login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp"/>
 
@@ -15,5 +16,6 @@
         android:id="@+id/login_with_facebook_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="login with facebook"/>
+        android:text="login with facebook"
+        android:visibility="gone"/>
 </RelativeLayout>
