--- a/android/Finder/app/src/main/res/layout/people_list_layout.xml
+++ b/android/Finder/app/src/main/res/layout/people_list_layout.xml
@@ -1,11 +1,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:layout_height="60dp">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ImageView
+        android:id="@+id/people_list_layout_picture_imageview"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_launcher"/>
+
+    <TextView
+        android:id="@+id/people_list_layout_name_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/people_list_layout_picture_imageview"
+        android:paddingLeft="20dp"
+        android:layout_centerVertical="true"
+        android:textSize="20sp"
+        android:textColor="@android:color/black"
+        android:text="dummy like"/>
 
 </RelativeLayout>
