--- a/android/Finder/app/src/main/res/layout/activity_main.xml
+++ b/android/Finder/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
         android:id="@+id/worker_activity_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="go to worker"/>
+        android:text="go to worker"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/people_activity_button"
@@ -25,7 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_below="@+id/people_activity_button"
-        android:text="go to facebook"/>
+        android:text="go to facebook"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/server_activity_button"
@@ -33,7 +35,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_below="@+id/facebook_activity_button"
-        android:text="go to server"/>
+        android:text="go to server"
+        android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/events_activity_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/server_activity_button"
+        android:text="go to events"/>
 
 
 </RelativeLayout>
